--- a/wordpress/themes/cafm.pro/style.css
+++ b/wordpress/themes/cafm.pro/style.css
@@ -406,11 +406,27 @@ template {
 [hidden] {
 	display: none;
 }
+/* --------------------------------------------
+ Icons
+-----------------------------------------------*/
+.icon {
+	position: relative;
+	top: -0.1em;
+	display: inline-block;
+	-webkit-font-smoothing: antialiased;
+	-moz-osx-font-smoothing: grayscale;
+	vertical-align: middle;
+}
+.icon-home {
+	height: 1em;
+	display: inline-block;
+	content: url('data:image/svg+xml,<svg width="1em" height="1em" viewBox="0 0 16 16" class="mysvg" fill="currentColor" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" d="M7.646 1.146a.5.5 0 0 1 .708 0l6 6a.5.5 0 0 1 .146.354v7a.5.5 0 0 1-.5.5H9.5a.5.5 0 0 1-.5-.5v-4H7v4a.5.5 0 0 1-.5.5H2a.5.5 0 0 1-.5-.5v-7a.5.5 0 0 1 .146-.354l6-6zM2.5 7.707V14H6v-4a.5.5 0 0 1 .5-.5h3a.5.5 0 0 1 .5.5v4h3.5V7.707L8 2.207l-5.5 5.5z"/><path fill-rule="evenodd" d="M13 2.5V6l-2-2V2.5a.5.5 0 0 1 .5-.5h1a.5.5 0 0 1 .5.5z"/></svg>'); 
+}
 
 /* *** CHANGES TO ORIGINAL STYLE.CSS *** */
 .wrap {
 	margin: 0 auto;
-	width: 1000px;
+	width: 1024px;
 }
 #header .site-info {
 	vertical-align: top;
@@ -442,6 +458,31 @@ template {
 #footer {
 	font-family:'DejaVu Sans Bold', sans-serif;
 }
+
+#canvas .sidebar {
+	float: right;
+	margin-left: 25px;
+	margin-bottom: 10px;
+	padding: 0 10px 10px 10px;
+}
+#canvas .sidebar ul {
+	list-style-type: none;
+	margin: 0;
+}
+
+#canvas .breadcrumbs {
+	margin: 0 0 20px 0;
+	display: inline-block;
+}
+#canvas .entry-title {
+	display: inline-block;
+}
+#canvas .article-date{
+	position: absolute;
+	bottom: 15px;
+	right: 15px;
+}
+
 /* Debug */
 /*#header, #topnav, #canvas, #footer { border: 1px solid; }*/
 
@@ -517,7 +558,6 @@ template {
 
 .main-navigation ul ul a {
 	letter-spacing: 0;
-	padding: 0.4em 0;
 	position: relative;
 	text-transform: none;
 }
@@ -700,6 +740,7 @@ template {
 	}
 
 	.main-navigation li {
+		text-align: center;
 		border: 0;
 		display: inline-block;
 	}
@@ -708,10 +749,8 @@ template {
 		display: block;
 	}
 
-/* TODO customize */
-
 	.main-navigation a {
-		padding: 1em 1.25em;
+		padding: 0;
 	}
 	.footer-nav.main-navigation a {
 		padding: 0;
@@ -724,7 +763,6 @@ template {
 		padding: 0;
 		position: absolute;
 		top: 100%;
-		z-index: 99999;
 	}
 
 	.main-navigation ul li.menu-item-has-children:before,
@@ -771,10 +809,12 @@ template {
 		right: auto;
 	}
 
+/*
 	.main-navigation ul ul a {
 		padding: 0.75em 1.25em;
 		width: 16em;
 	}
+*/
 
 	.main-navigation li li {
 		-webkit-transition: background-color 0.2s ease-in-out;
