--- a/wordpress/themes/cafm.pro/style.css
+++ b/wordpress/themes/cafm.pro/style.css
@@ -763,6 +763,7 @@ template {
 		padding: 0;
 		position: absolute;
 		top: 100%;
+		z-index: 9;
 	}
 
 	.main-navigation ul li.menu-item-has-children:before,
